Huge refactoring for better handling of generics (e.g., <T>), still need to clean up code. Other changes: - TokensDataset program automatically asserts that all tokens belonging to the oracle are actually suggested as a next legal token at that position. - Better handling of type resolving, less exceptions, including primitives and arrays (and arrays of arrays). - Many new tests.